--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Odin Landing Page</title>
 </head>
 <body>
-    
+    <div class="top-section">
+        <header>
+            <p class="logo">Header Logo</p>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </header>
+
+        <div class="top-bottom-section">
+            <div class="top-left">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title.
+                    It's a smaller font and the color is lower contrast.
+                </p>
+                <button class="sign-up" value="submit">Sign up</button>
+            </div>
+
+            <img>Image goes here
+        </div>
+    </div>
 </body>
 </html>
