--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <header>
             <p class="logo">Header Logo</p>
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
             </ul>
         </header>
 
@@ -26,7 +26,7 @@
                 <button class="sign-up" value="submit">Sign up</button>
             </div>
 
-            <img>Image goes here
+            <img>
         </div>
     </div>
 </body>
