Add HTML for info section

--- a/index.html
+++ b/index.html
@@ -29,5 +29,28 @@
             <img>
         </div>
     </div>
+
+    <div class="info-section">
+        <h2>Some random information</h2>
+
+        <div class="info-images">
+            <div class="info-image">
+                <img>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="info-image">
+                <img>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="info-image">
+                <img>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="info-image">
+                <img>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
