Style image boxes and center them with flexbox

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
         <div class="info-images">
             <div class="info-image">
                 <img>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, impedit.</p>
             </div>
             <div class="info-image">
                 <img>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, impedit.</p>
             </div>
             <div class="info-image">
                 <img>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, impedit.</p>
             </div>
             <div class="info-image">
                 <img>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, impedit.</p>
             </div>
         </div>
     </div>
