--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button class="sign-up" value="submit">Sign up</button>
             </div>
 
-            <img>
+            <img src="./img/nature.jpg">
         </div>
     </div>
 
