Style quote section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 is that it looks nice.
             </p>
             <p class="quotee">
-                Thor, God of Thunder
+                -Thor, God of Thunder
             </p>
         </div>
     </div>
