--- a/index.html
+++ b/index.html
@@ -65,5 +65,15 @@
             </p>
         </div>
     </div>
+
+    <div class="action-section">
+        <div class="action-box">
+            <div class="action-text">
+                <p class="action-top-text">Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="sign-up" value="submit">Sign up</button>
+        </div>
+    </div>
 </body>
 </html>
