--- a/index.html
+++ b/index.html
@@ -75,5 +75,9 @@
             <button class="sign-up" value="submit">Sign up</button>
         </div>
     </div>
+    
+    <footer>
+        <p>Copyright © The Odin Project 2021</p>
+    </footer>
 </body>
 </html>
