Add nature photos to info img tags

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 
         <div class="info-images">
             <div class="info-image">
-                <img>
+                <img src="./img/info-img1.jpg" alt="Photo of a green mountainous scenery">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, impedit.</p>
             </div>
             <div class="info-image">
-                <img>
+                <img src="./img/info-img2.jpg" alt="Photo of a small waterfall">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, impedit.</p>
             </div>
             <div class="info-image">
-                <img>
+                <img src="./img/info-img3.jpg" alt="Photo of a forest with a mountain background">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, impedit.</p>
             </div>
             <div class="info-image">
-                <img>
+                <img src="./img/info-img4.jpg" alt="Photo of a small waterfall">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, impedit.</p>
             </div>
         </div>
