--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <header>
             <p class="logo">Header Logo</p>
             <ul>
-                <li><a href="">header link one</a></li>
-                <li><a href="">header link two</a></li>
-                <li><a href="">header link three</a></li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </header>
 
